# astrbot-workspace

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  TEST.md  _conf_schema.json  config.py  main.py  metadata.yaml  requirements.txt  skills-lock.json  workspace-tree.txt
.agents/: mp_inspect.py
.agents/skills/skill-astrbot-dev/: SKILL.md
astrbot_plugin_lol-master/: .gitignore  README.md  _conf_schema.json  main.py  pyproject.toml  requirements.txt
astrbot_plugin_lol-master/data/: cmd_config.json
astrbot_plugin_lol-master/src/astrbot_plugin_f1_notifier/: __init__.py  api.py  formatter.py  image_renderer.py  models.py  scheduler.py
astrbot_plugin_lol-master/src/astrbot_plugin_lol_notifier/: __init__.py  api.py  config.py  formatter.py  image_renderer.py  models.py  scheduler.py  state.py  utils.py
astrbot_plugin_lol-master/src/astrbot_plugin_lol_notifier/fetcher/: __init__.py  api.py  bilibili.py  bilibili_dynamic.py  lolesports.py  weibo.py
astrbot_plugin_lol-master/src/astrbot_plugin_lol_notifier/formatter/: __init__.py  message.py
astrbot_plugin_lol-master/src/astrbot_plugin_lol_notifier/parser/: __init__.py  lineup.py  schedule.py
astrbot_plugin_lol-master/tests/: conftest.py  test_fixes.py  test_standalone.py
scripts/: refresh_riot_key.py
src/: __init__.py
src/astrbot_plugin_lol_notifier/: __init__.py  config.py  image_renderer.py  models.py  scheduler.py  state.py  utils.py
src/astrbot_plugin_lol_notifier/fetcher/: __init__.py  __init__.py.tmp  api.py  bilibili.py  (+5 more)
tests/: conftest.py  test_pandascore_endpoints.py  test_schedule_parsing.py
(+17 files in other folders)
